# stack_simulator

./: CMakeLists.txt  README.md  button.cpp  button.h  cell.cpp  cell.h  main  main.cpp
include/: button.h  cell.h  cellstack.h
src/: cellstack.cpp  main.cpp
